--- a/iwg_blog/assets/blog/scss/templates/partials/menu-aside/_menu-aside.scss
+++ b/iwg_blog/assets/blog/scss/templates/partials/menu-aside/_menu-aside.scss
@@ -1,8 +1,3 @@
-[canvas="container"] {
-    display: inherit;
-    table-layout: inherit;
-}
-
 .sb-slidebar {
     background-color: $white!important; /* Default Slidebars background colour, overwrite this with your own css. */
     border-left: 1px solid rgba(51, 51, 51, 0.4);
